fix upgrades overlapping

--- a/Synergism.css
+++ b/Synergism.css
@@ -7488,7 +7488,8 @@ html[data-mobile="true"] .hideOnMobile {
     /* Upgrades flex container */
     #upgradesFlex {
         display: grid;
-        grid-template-columns: repeat(6, 16%);
+        grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+        justify-content: center;
         margin: 2% auto;
         width: unset;
     }
